package bestelsysteem.external;

public interface HotelDriver {
    String getLocation(String location);
    String getHotels(String encodedLocation);
}
