@startuml

class ReisService {
    -List<HotelAdapter> hotelAdapters
    +List<Hotel> getHotels(String locatie)
}

interface HotelAdapter {
    +String getLocation(String location)
    +List<Hotel> getHotels(String locationCode)
    +String getApiName()
}

class BookingApiAdapter {
    -ObjectMapper objectMapper
    -BookingDriver bookingDriver
    +String getLocation(String location)
    +List<Hotel> getHotels(String locationCode)
    +String getApiName()
}

class TripAdvisorApiAdapter {
    -ObjectMapper objectMapper
    -TripadvisorDriver tripadvisorDriver
    +String getLocation(String location)
    +List<Hotel> getHotels(String locationCode)
    +String getApiName()
}

interface HotelDriver {
    +String getLocation(String location)
    +String getHotels(String encodedLocation)
}

class TripadvisorDriver {
    -String apiKey
    +String getLocation(String location)
    +String getHotels(String encodedLocation)
}

class BookingDriver {
    -String apiKey
    +String getLocation(String location)
    +String getHotels(String encodedLocation)
}


ReisService --> HotelAdapter
HotelDriver <|.. TripadvisorDriver
HotelDriver <|.. BookingDriver
HotelAdapter <|.. BookingApiAdapter
HotelAdapter <|.. TripAdvisorApiAdapter
BookingApiAdapter --> BookingDriver
TripAdvisorApiAdapter --> TripadvisorDriver


@enduml
